--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
   "license": "MIT",
   "devDependencies": {
     "cordova-android": "^9.0.0",
+    "cordova-plugin-background-mode": "git+https://bitbucket.org/TheBosZ/cordova-plugin-run-in-background.git",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-whitelist": "^1.3.4"
   },
   "cordova": {
     "plugins": {
-      "cordova-plugin-whitelist": {}
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-background-mode": {}
     },
     "platforms": [
       "android"
     ]
-  }
+  },
+  "dependencies": {}
 }
